--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -1,16 +1,16 @@
-.container{
+.container {
   padding: 0 40rpx;
 }
 
-.tips{
+.tips {
   padding: 40rpx;
   border-radius: 16rpx;
-  background-color: #F2F5F7;
+  background-color: #f2f5f7;
   margin: 40rpx 0;
   text-align: center;
 }
 
-.tips button{
+.tips button {
   width: 480rpx;
   height: 80rpx;
   border-radius: 50rpx;
@@ -20,77 +20,135 @@
   box-sizing: border-box;
 }
 
-.tips .comment_row{
+.tips .comment_row {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.tips .comment_row button{
+.tips .comment_row button {
   width: 240rpx;
   height: 64rpx;
   line-height: 62rpx;
   font-size: 28rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   letter-spacing: 2rpx;
   border: 1rpx solid #e0e0e0;
   border-radius: 50rpx;
   background-color: transparent;
 }
 
-.tips .title{
+.tips .title {
   font-size: 32rpx;
   line-height: 50rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
 .finished .shopping, .pending .cancel_order {
   line-height: 78rpx;
   background-color: transparent;
-  color: #3C3C3C;
-  border: 1rpx solid #B7B7B7;
+  color: #3c3c3c;
+  border: 1rpx solid #b7b7b7;
 }
 
-.overtime .shopping, .refund .shopping, .pending .pay{
+.overtime .shopping, .refund .shopping, .pending .pay {
   line-height: 80rpx;
   border: 0;
   color: #fff;
-  background-color: #F97572;
-  box-shadow:0px 10rpx 22rpx 0px rgba(164,178,190,0.39);
+  background-color: #f97572;
+  box-shadow: 0px 10rpx 22rpx 0px rgba(164, 178, 190, 0.39);
 }
 
-.refund .title{
-  color: #F97572;
+.refund .title {
+  color: #f97572;
 }
 
-.refund .subTitle{
+.refund .subTitle {
   font-size: 24rpx;
   line-height: 33rpx;
   margin-top: 8rpx;
-  color: #3C3C3C;
-} 
+  color: #3c3c3c;
+}
 
-.pending .subTitle{
+.pending .subTitle {
   font-size: 24rpx;
   line-height: 33rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-top: 8rpx;
 }
 
-.pending .subTitle text{
-  color: #23C2F7;
+.pending .subTitle text {
+  color: #23c2f7;
 }
 
-.confirm{
+.confirm {
   width: 100%;
   padding: 60rpx 0 49rpx;
-  background:linear-gradient(270deg,rgba(36,225,226,1) 0%,rgba(35,194,247,1) 100%);
-  box-shadow:0px 16rpx 40rpx 0px rgba(205,246,249,1);
+  background: linear-gradient(270deg, rgba(36, 225, 226, 1) 0%, rgba(35, 194, 247, 1) 100%);
+  box-shadow: 0px 16rpx 40rpx 0px rgba(205, 246, 249, 1);
   border-radius: 16rpx;
   margin: 80rpx 0;
+  color: #fff;
+  box-sizing: border-box;
 }
 
-.confirm .ticket-offline .ticket-offline-name{
+.confirm.other {
+  padding: 40rpx;
+}
+
+.confirm .ticket-num .ticket-num_tt {
+  font-size: 56rpx;
+  line-height: 78rpx;
+  letter-spacing: 1rpx;
+  margin-bottom: 24rpx;
+}
+
+.confirm .ticket-num .ticket-num_ft {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.confirm .ticket-num .ticket-num_ft .ticket-num_name {
+  max-width: 340rpx;
+  font-size: 32rpx;
+  line-height: 45rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.confirm .ticket-num .ticket-num_ft .ticket-num_expire {
+  font-size: 24rpx;
+  line-height: 33rpx;
+}
+
+.confirm .ticket-qr .ticket-qr_icon{
+  width: 344rpx;
+  height: 344rpx;
+  margin: 0 auto 40rpx;
+}
+
+.confirm .ticket-qr .ticket-qr_icon image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.confirm .ticket-qr .ticket-qr_name{
+  font-size: 36rpx;
+  line-height: 50rpx;
+  text-align: center;
+  margin-bottom: 8rpx;
+}
+
+.confirm .ticket-qr .ticket-qr_expire{
+  font-size: 24rpx;
+  line-height: 33rpx;
+  text-align: center;
+}
+
+.confirm .ticket-offline .ticket-offline-name {
   font-size: 36rpx;
   line-height: 50rpx;
   color: #fff;
@@ -109,32 +167,63 @@
   width: 480rpx;
   height: 80rpx;
   line-height: 80rpx;
-  color: #23C2F7;
+  color: #23c2f7;
   letter-spacing: 3rpx;
   font-size: 32rpx;
   border-radius: 50rpx;
   background-color: #fff;
 }
 
+.ticket-nums {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 162rpx;
+  padding: 0 40rpx;
+  background: linear-gradient(270deg, rgba(36, 225, 226, 1) 0%, rgba(35, 194, 247, 1) 100%);
+  box-shadow: 0px 16rpx 40rpx 0px rgba(205, 246, 249, 1);
+  border-radius: 16rpx;
+  box-sizing: border-box;
+  margin: 80rpx 0;
+}
 
-.row{
+.ticket-nums .text {
+  font-size: 36rpx;
+  line-height: 50rpx;
+  color: #fff;
+  letter-spacing: 1rpx;
+}
+
+.ticket-nums .arrow {
+  width: 36rpx;
+  height: 36rpx;
+}
+
+.ticket-nums .arrow image {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.row {
   width: 100%;
   padding: 40rpx 0;
   border-top: 1rpx solid #e0e0e0;
 }
 
-.row .title{
+.row .title {
   font-size: 36rpx;
   line-height: 50rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 40rpx;
 }
 
-.row .commodity_other_info{
+.row .commodity_other_info {
   margin-top: 26rpx;
 }
 
-.row .commodity .poster{
+.row .commodity .poster {
   width: 172rpx;
   min-width: 172rpx;
   height: 172rpx;
@@ -143,83 +232,83 @@
   overflow: hidden;
 }
 
-.row .commodity .poster image{
+.row .commodity .poster image {
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
 
-.row .commodity .info{
+.row .commodity .info {
   flex: 1;
   max-width: 480rpx;
 }
 
-.row .commodity .info .c_title{
+.row .commodity .info .c_title {
   width: 100%;
   font-size: 32rpx;
   line-height: 45rpx;
   letter-spacing: 1rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 32rpx;
-  overflow:hidden;
-  white-space:nowrap;
-  text-overflow:ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
-.row .commodity .info .c_subInfo, .row .commodity .info .c_date{
+.row .commodity .info .c_subInfo, .row .commodity .info .c_date {
   font-size: 24rpx;
   line-height: 33rpx;
-  color: #666666;
+  color: #666;
 }
 
-.row .commodity .info .c_subInfo{
+.row .commodity .info .c_subInfo {
   margin-bottom: 16rpx;
 }
 
-.row .text{
+.row .text {
   font-size: 28rpx;
   line-height: 40rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 24rpx;
 }
 
-.row .text:last-of-type{
+.row .text:last-of-type {
   margin-bottom: 0;
 }
 
-.row .flex{
+.row .flex {
   display: flex;
   align-items: center;
 }
 
-.row .text.flex>view{
+.row .text.flex>view {
   flex: 1;
 }
 
-.row .flex .orange{
-  color: #F97572;
+.row .flex .orange {
+  color: #f97572;
   text-align: right;
 }
 
-.row .other .refund{
+.row .other .refund {
   flex: 1;
   font-size: 28rpx;
   line-height: 40rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
 .row .other .shopping {
   flex: 1;
 }
 
-.row .other .shopping button{
+.row .other .shopping button {
   width: 240rpx;
   height: 64rpx;
   line-height: 62rpx;
   font-size: 28rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   letter-spacing: 2rpx;
-  border: 1rpx solid #B7B7B7;
+  border: 1rpx solid #b7b7b7;
   border-radius: 50rpx;
   padding: 0;
   background-color: #fff;
