--- a/pages/morecomment/morecomment.wxml
+++ b/pages/morecomment/morecomment.wxml
@@ -21,7 +21,9 @@
         </view>
       </view>
       <view class='main'>
-        <view class='text'>{{item.comment}}</view>
+        <view class='text'>
+          <text>{{item.comment}}</text>
+        </view>
         <view class='img_row' wx:if='{{item.pics.length}}'>
           <block wx:for='{{item.pics}}' wx:key='{{pIndex}}' wx:for-item='pItem' wx:for-index='pIndex'>
             <image mode='aspectFill' src='{{pItem}}'></image>
