--- a/pages/poi_detail/poi_detail.wxss
+++ b/pages/poi_detail/poi_detail.wxss
@@ -259,9 +259,17 @@
 
 .area .comment .main .text {
   font-size: 32rpx;
-  line-height: 32rpx;
+  line-height: 40rpx;
   color: #3c3c3c;
   margin-bottom: 24rpx;
+}
+
+.area .comment .main .text text{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow:ellipsis;
 }
 
 .area .comment .main .img_row {
